syntax = "proto3";

package AccountMicroservice;

service AccountService {
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}
